--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1414,3 +1414,31 @@ booktitle = {Archiv. Math. Logik}
  booktitle = {Principles of Programming Languages (POPL)},
  year = {1991}
 }
+
+@inproceedings{DBLP:conf/litp/Cardelli85,
+  author    = {Luca Cardelli},
+  title     = {Amber},
+  booktitle = {Combinators and Functional Programming Languages, Thirteenth Spring
+               School of the LITP, Val d'Ajol, France, May 6-10, 1985, Proceedings},
+  pages     = {21--47},
+  year      = {1985}
+}
+
+@article{appel2001indexed,
+  title={An indexed model of recursive types for foundational proof-carrying code},
+  author={Appel, Andrew W and McAllester, David},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={23},
+  number={5},
+  pages={657--683},
+  year={2001}
+}
+
+@inproceedings{ahmed2006step,
+  title={Step-indexed syntactic logical relations for recursive and quantified types},
+  author={Ahmed, Amal},
+  booktitle={European Symposium on Programming},
+  pages={69--83},
+  year={2006},
+  organization={Springer}
+}
