--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1442,3 +1442,19 @@ booktitle = {Archiv. Math. Logik}
   year={2006},
   organization={Springer}
 }
+
+@inproceedings{bono2008traits,
+  title={On traits and types in a Java-like setting},
+  author={Bono, Viviana and Damiani, Ferruccio and Giachino, Elena},
+  booktitle={Fifth Ifip International Conference On Theoretical Computer Science--Tcs 2008},
+  pages={367--382},
+  year={2008}
+}
+
+@inproceedings{fisher2000extending,
+  title={Extending Moby with inheritance-based subtyping},
+  author={Fisher, Kathleen and Reppy, John},
+  booktitle={European Conference on Object-Oriented Programming},
+  pages={83--107},
+  year={2000}
+}
